# Diamond-Square

./: Cargo.toml  README.md
src/: main.rs
